force-app/main/default/objects/VertexAPI__c/VertexAPI__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Vertex API</label>
</CustomObject>