force-app/main/default/objects/VertexAPI__c/fields/Enable_Vertex_Xml_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Vertex_Xml_Logging__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This flag enable/disable the Vertex Request and Responses logging in Vertex_Log__c object</description>
    <inlineHelpText>This flag enable/disable the Vertex Request and Responses logging in Vertex_Log__c object</inlineHelpText>
    <label>Enable Vertex Xml Logging</label>
    <type>Checkbox</type>
</CustomField>