force-app/main/default/objects/VertexAPI__c/fields/End_point__c.field-meta.xml
<CustomField>
    <fullName>End_point__c</fullName>
    <label>End point</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>