force-app/main/default/objects/VertexAPI__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>The password during vertex webservice API interaction.</description>
    <inlineHelpText>The password during vertex webservice API interaction.</inlineHelpText>
    <label>Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>