force-app/main/default/objects/VertexAPI__c/fields/serviceNS__c.field-meta.xml
<CustomField>
    <fullName>serviceNS__c</fullName>
    <label>serviceNS</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>