force-app/main/default/objects/VertexAPI__c/fields/soapNS__c.field-meta.xml
<CustomField>
    <fullName>soapNS__c</fullName>
    <label>soapNS</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>