force-app/main/default/objects/VertexAPI__c/fields/TrustedID__c.field-meta.xml
<CustomField>
    <fullName>TrustedID__c</fullName>
    <label>TrustedID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>