force-app/main/default/objects/VertexAPI__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Vertex username for interacting Vertex Tax webservice APIs</description>
    <inlineHelpText>Vertex username for interacting Vertex Tax webservice APIs</inlineHelpText>
    <label>Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>