force-app/main/default/objects/VertexAPI__c/fields/XSI__c.field-meta.xml
<CustomField>
    <fullName>XSI__c</fullName>
    <label>XSI</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>